[package]
name = "bellado"
description = "A fast cli todo tool"
version = "0.1.2"
edition = "2021"
license = "gpl-3.0"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
readme = "README.md"
homepage = "https://github.com/isabelroses/bellado"
repository = "https://github.com/isabelroses/bellado"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = "4.3.9"
dirs = "5.0.1"
serde_json = "1.0.99"
